--- a/Troc Livres/Info.plist
+++ b/Troc Livres/Info.plist
@@ -24,6 +24,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Tu donnes l&apos;accès !</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Tu donnes l&apos;accès !</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
